# neovim-config

./: README.md  init.lua  lazy-lock.json  pyproject.toml  temp-lsp.lua
after/ftplugin/: dockerfile.lua  go.lua  markdown.lua  python.lua  yaml.lua
lua/: autocmds.lua  keymaps.lua  options.lua  plugin-keymaps.lua  plugin-options.lua
lua/config/: lazy.lua
lua/plugins/: auto-session.lua  barbeque.lua  colorscheme.lua  comment.lua  completion.lua  dap-ui.lua  dap-virtual-text.lua  git-blame.lua  githubcopilot.lua  indentation-guides.lua  latex.lua  lint.lua  lsp.lua  lualine.lua  mini.lua  oil.lua  onedark.lua  python-tools.lua  rainbow-delimiters.lua  render-markdown.lua  telescope.lua  tree.lua  treesitter.lua  twilight.lua
lua/plugins/telescope/: multigrep.lua
plugin/: floaterminal.lua  rightclickmenu.lua
